--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,3 +1,4 @@
 <header class="header">
-    header
+    <div class="header__logo">AK</div>
+    <div class="header__title">Welcome</div>
 </header>
