--- a/src/css/files/app.scss
+++ b/src/css/files/app.scss
@@ -1,7 +1,35 @@
+body,
+h1, h2, h3, p {
+    margin: 0;
+}
+
 .header {
     background: lightblue;
+    text-align: center;
+    padding: 5px;
+    // border-bottom: 1px solid DeepSkyBlue;
 
     &__title {
         font-style: italic;
+    }
+}
+
+.content { 
+
+    &__list {
+        padding: 5px;
+        box-sizing: border-box;
+        margin: 10px;
+    }
+    
+    &__item {
+        border-radius: 5px;
+        background: lightgray;
+        padding: 10px;
+        margin: 10px auto;
+        border-bottom: 1px solid grey;
+        box-shadow: 0 0 5px rgba(0,0,0,0.5);
+
+        
     }
 }
